# qa.guru_lesson_16

./: .gitignore  README.md  config.py  pyproject.toml  pytest.ini
tests/: conftest.py  test_mamago.py
utils/: attach.py
